--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,11 +7,27 @@
 			"label": "build",
 			"type": "shell",
 			"command": "gnatmake",
-			"args": ["-P", "gnatgen", "-p"],
+			"args": [
+				"-P",
+				"agen",
+				"-p"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "build tests",
+			"type": "shell",
+			"command": "gnatmake",
+			"args": [
+				"-P",
+				"tests",
+				"-p"
+			],
+			"group": "build",
+			"problemMatcher": []
 		}
 	]
 }
